# ssv4

./: CMakeLists.txt  IOMAP.md  README.md
examples/: console.s4  display.s4  echo.s4  fill.s4  graph.s4  line.s4  loop.s4  mem.s4  pixel.s4  test.s4
src/: argh.h  ss4as.bat  ss4as.cpp  ss4vm.bat  ss4vm.cpp
